# qml-module-edupals-n4d

./: CMakeLists.txt  README.md  test.qml
debian/: changelog  control  copyright
src/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  variant.cpp  variant.h
